add internet sharing section

--- a/_posts/2014-06-15-Mac-Tricks.html
+++ b/_posts/2014-06-15-Mac-Tricks.html
@@ -8,4 +8,14 @@ title: Mac技巧
 <li>默认快捷键: command+shift+4</li>
 <li>第三方App: Snip[<a href="http://snip.qq.com/">http://snip.qq.com/</a>]</li>
 </ul>
+<h3>Share Internet via Wifi</h3>
+"Internet Sharing allows other computers to share your connection to the Internet."<br/>
+前提: Mac用Ethernet X接入互联网<br/>
+<ol>
+<li>打开System Preferences/Sharing</li>
+<li>在左侧列表点击Internet Sharing，先不勾选</li>
+<li>在右侧Share your connection from 选择接入互联网的网卡</li>
+<li>To computers using 勾选Wi-Fi，并且在Wi-Fi Options...输入Network Name和Password等信息</li>
+<li>勾选左侧的Interneet Sharing</li>
+</ol>
 <p>{{ page.date | date_to_string }}</p>
