--- a/_posts/2014-06-18-余额宝收益数据追踪.html
+++ b/_posts/2014-06-18-余额宝收益数据追踪.html
@@ -3,8 +3,8 @@ layout: post
 title: 余额宝收益数据追踪
 ---
 <h2>{{ page.title }}</h2>
-<iframe src="/playground/7dayyield.html" name="" width="100%" height="300px" frameborder="0" scrolling="auto"></iframe>
+<iframe src="/playground/yuebao_7dayyield.html" name="" width="100%" height="300px" frameborder="0" scrolling="auto"></iframe>
 <p style="text-align: center;">七日年化收益率</p>
-<iframe src="/playground/milliongain.html" name="" width="100%" height="300px" frameborder="0" scrolling="auto"></iframe>
+<iframe src="/playground/yuebao_milliongain.html" name="" width="100%" height="300px" frameborder="0" scrolling="auto"></iframe>
 <p style="text-align: center;">万份收益</p>
 <p>{{ page.date | date_to_string }}</p>
