test whether meta works.

--- a/_posts/2014-06-22-百赚利滚利版收益数据追踪.html
+++ b/_posts/2014-06-22-百赚利滚利版收益数据追踪.html
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 百赚利滚利版收益数据追踪
+description: 百赚利滚利版收益数据追踪
+keywords: 百赚,百赚利滚利
 ---
 <h2>{{ page.title }}</h2>
 <iframe src="/playground/baizhuan_7dayyield.html" name="" width="100%" height="300px" frameborder="0" scrolling="auto"></iframe>
