--- a/_posts/2014-06-15-Mac-Tricks.html
+++ b/_posts/2014-06-15-Mac-Tricks.html
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: Mac技巧
+description:
+keywords:Mac技巧,Mac Tricks,Mac share wifi,Mac print screen,Mac screenshot,Mac snip
 ---
 <h2>{{ page.title }}</h2>
 <br/>
