--- a/_posts/2014-06-18-余额宝收益数据追踪.html
+++ b/_posts/2014-06-18-余额宝收益数据追踪.html
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 余额宝收益数据追踪
+description: 余额宝收益数据追踪
+keywords: 余额宝
 ---
 <h2>{{ page.title }}</h2>
 <iframe src="/playground/yuebao_7dayyield.html" name="" width="100%" height="300px" frameborder="0" scrolling="auto"></iframe>
