--- a/_posts/2014-06-25-网易理财收益数据追踪.html
+++ b/_posts/2014-06-25-网易理财收益数据追踪.html
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: 网易理财收益数据追踪
+description: 网易理财收益数据追踪
+keywords: 网易理财
 ---
 <h2>{{ page.title }}</h2>
 <iframe src="/playground/wangyi_7dayyield.html" name="" width="100%" height="300px" frameborder="0" scrolling="auto"></iframe>
