--- a/playground/baizhuan_7dayyield.html
+++ b/playground/baizhuan_7dayyield.html
@@ -90,7 +90,7 @@ var tip = d3.tip()
   .attr('class', 'd3-tip')
   .offset([-10, 0])
   .html(function(d) {
-    return "<strong>Frequency:</strong> <span style='color:red'>" + d.frequency + "</span>";
+    return "<strong>sevendayYield:</strong> <span style='color:red'>" + d.sevendayYield + "</span>";
   })
 
 var svg = d3.select("body").append("svg")
@@ -103,7 +103,7 @@ svg.call(tip);
 
 d3.tsv("data/baizhuan.tsv", type, function(error, data) {
   x.domain(data.map(function(d) { return d.letter; }));
-  y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
+  y.domain([0, d3.max(data, function(d) { return d.sevendayYield; })]);
 
   svg.append("g")
       .attr("class", "x axis")
@@ -118,7 +118,7 @@ d3.tsv("data/baizhuan.tsv", type, function(error, data) {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end")
-      .text("Frequency");
+      .text("sevendayYield");
 
   svg.selectAll(".bar")
       .data(data)
@@ -126,15 +126,15 @@ d3.tsv("data/baizhuan.tsv", type, function(error, data) {
       .attr("class", "bar")
       .attr("x", function(d) { return x(d.letter); })
       .attr("width", x.rangeBand())
-      .attr("y", function(d) { return y(d.frequency); })
-      .attr("height", function(d) { return height - y(d.frequency); })
+      .attr("y", function(d) { return y(d.sevendayYield); })
+      .attr("height", function(d) { return height - y(d.sevendayYield); })
       .on('mouseover', tip.show)
       .on('mouseout', tip.hide)
 
 });
 
 function type(d) {
-  d.frequency = +d.frequency;
+  d.sevendayYield = +d.sevendayYield;
   return d;
 }
 
