--- a/playground/baizhuan_7dayyield.html
+++ b/playground/baizhuan_7dayyield.html
@@ -83,8 +83,8 @@ var xAxis = d3.svg.axis()
 
 var yAxis = d3.svg.axis()
     .scale(y)
-    .orient("left")
-    .tickFormat(formatPercent);
+    .orient("left");
+//    .tickFormat(formatPercent);
 
 var tip = d3.tip()
   .attr('class', 'd3-tip')
@@ -108,17 +108,17 @@ d3.tsv("data/baizhuan.tsv", type, function(error, data) {
   svg.append("g")
       .attr("class", "x axis")
       .attr("transform", "translate(0," + height + ")")
-      .call(xAxis);
+//      .call(xAxis);
 
   svg.append("g")
       .attr("class", "y axis")
-      .call(yAxis)
+//      .call(yAxis)
     .append("text")
       .attr("transform", "rotate(-90)")
       .attr("y", 6)
       .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("sevendayYield");
+      .style("text-anchor", "end");
+//      .text("sevendayYield");
 
   svg.selectAll(".bar")
       .data(data)
