--- a/playground/baizhuan_7dayyield.html
+++ b/playground/baizhuan_7dayyield.html
@@ -66,8 +66,8 @@ body {
 <script>
 
 var margin = {top: 40, right: 20, bottom: 30, left: 40},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+    width = document.width - margin.left - margin.right,
+    height = document.height - margin.top - margin.bottom;
 
 var formatPercent = d3.format(".0%");
 
@@ -90,7 +90,7 @@ var tip = d3.tip()
   .attr('class', 'd3-tip')
   .offset([-10, 0])
   .html(function(d) {
-    return "<strong>sevendayYield:</strong> <span style='color:red'>" + d.sevendayYield + "</span>";
+    return "<span style='color:red'>"  + d.sevendayYield + "</span>@<span style='color:green'>" +d.date + "</span>";
   })
 
 var svg = d3.select("body").append("svg")
@@ -102,7 +102,7 @@ var svg = d3.select("body").append("svg")
 svg.call(tip);
 
 d3.tsv("data/baizhuan.tsv", type, function(error, data) {
-  x.domain(data.map(function(d) { return d.letter; }));
+  x.domain(data.map(function(d) { return d.date; }));
   y.domain([0, d3.max(data, function(d) { return d.sevendayYield; })]);
 
   svg.append("g")
@@ -124,7 +124,7 @@ d3.tsv("data/baizhuan.tsv", type, function(error, data) {
       .data(data)
     .enter().append("rect")
       .attr("class", "bar")
-      .attr("x", function(d) { return x(d.letter); })
+      .attr("x", function(d) { return x(d.date); })
       .attr("width", x.rangeBand())
       .attr("y", function(d) { return y(d.sevendayYield); })
       .attr("height", function(d) { return height - y(d.sevendayYield); })
