--- a/playground/baizhuan_7dayyield.html
+++ b/playground/baizhuan_7dayyield.html
@@ -59,88 +59,9 @@ body {
 }
 </style>
 <body>
-<!--script src="/playground/script/d3.js"></script-->
 <script src="http://d3js.org/d3.v3.min.js"></script>
 <script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
 
-<script>
-
-var margin = {top: 40, right: 20, bottom: 30, left: 40},
-    width = document.width - margin.left - margin.right,
-    height = document.height - margin.top - margin.bottom;
-
-var formatPercent = d3.format(".0%");
-
-var x = d3.scale.ordinal()
-    .rangeRoundBands([0, width], .1);
-
-var y = d3.scale.linear()
-    .range([height, 0]);
-
-var xAxis = d3.svg.axis()
-    .scale(x)
-    .orient("bottom");
-
-var yAxis = d3.svg.axis()
-    .scale(y)
-    .orient("left");
-//    .tickFormat(formatPercent);
-
-var tip = d3.tip()
-  .attr('class', 'd3-tip')
-  .offset([-10, 0])
-  .html(function(d) {
-    return "<span style='color:red'>"  + d.sevendayYield + "</span>@<span style='color:green'>" +d.date + "</span>";
-  })
-
-var svg = d3.select("body").append("svg")
-    .attr("width", width + margin.left + margin.right)
-    .attr("height", height + margin.top + margin.bottom)
-  .append("g")
-    .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
-
-svg.call(tip);
-
-d3.tsv("data/baizhuan.tsv", type, function(error, data) {
-  x.domain(data.map(function(d) { return d.date; }));
-  y.domain([0, d3.max(data, function(d) { return d.sevendayYield; })]);
-
-  svg.append("g")
-      .attr("class", "x axis")
-      .attr("transform", "translate(0," + height + ")")
-//      .call(xAxis);
-
-  svg.append("g")
-      .attr("class", "y axis")
-//      .call(yAxis)
-    .append("text")
-      .attr("transform", "rotate(-90)")
-      .attr("y", 6)
-      .attr("dy", ".71em")
-      .style("text-anchor", "end");
-//      .text("sevendayYield");
-
-  svg.selectAll(".bar")
-      .data(data)
-    .enter().append("rect")
-      .attr("class", "bar")
-      .attr("x", function(d) { return x(d.date); })
-      .attr("width", x.rangeBand())
-      .attr("y", function(d) { return y(d.sevendayYield); })
-      .attr("height", function(d) { return height - y(d.sevendayYield); })
-      .on('mouseover', tip.show)
-      .on('mouseout', tip.hide)
-
-});
-
-function type(d) {
-  d.sevendayYield = +d.sevendayYield;
-  return d;
-}
-
-</script>
-
-<!--
 <script>
 
 var margin = {top: 40, right: 0, bottom: 10, left: 0},
@@ -180,7 +101,7 @@ var svg = d3.select("body").append("svg")
 svg.call(tip);
 
 d3.tsv("data/baizhuan.tsv", type, function(error, data) {
-  x.domain(data.map(function(d) { return d.date; }));
+  x.domain(data.map(function(d) { return d.aa; }));
   y.domain([0, d3.max(data, function(d) { return d.sevendayYield; })]);
 
   svg.append("g")
@@ -202,7 +123,7 @@ d3.tsv("data/baizhuan.tsv", type, function(error, data) {
       .data(data)
     .enter().append("rect")
       .attr("class", "bar")
-      .attr("x", function(d) { return x(d.date); })
+      .attr("x", function(d) { return x(d.aa); })
       .attr("width", x.rangeBand())
       .attr("y", function(d) { return y(d.sevendayYield); })
       .attr("height", function(d) { return height - y(d.sevendayYield); })
@@ -217,4 +138,3 @@ function type(d) {
 }
 
 </script>
--->
