--- a/playground/baizhuan_7dayyield.html
+++ b/playground/baizhuan_7dayyield.html
@@ -103,7 +103,7 @@ var svg = d3.select("body").append("svg")
 svg.call(tip);
 
 d3.tsv("data/baizhuan.tsv", type, function(error, data) {
-  x.domain(data.map(function(d) { return d.letter; }));
+  x.domain(data.map(function(d) { return d.date; }));
   y.domain([0, d3.max(data, function(d) { return d.sevendayYield; })]);
 
   svg.append("g")
