--- a/playground/baizhuan_7dayyield.html
+++ b/playground/baizhuan_7dayyield.html
@@ -67,8 +67,8 @@ body {
 <script>
 
 var margin = {top: 40, right: 20, bottom: 30, left: 40},
-    width = 960 - margin.left - margin.right,
-    height = 500 - margin.top - margin.bottom;
+    width = document.width - margin.left - margin.right,
+    height = document.height - margin.top - margin.bottom;
 
 var formatPercent = d3.format(".0%");
 
@@ -118,8 +118,8 @@ d3.tsv("data/baizhuan.tsv", type, function(error, data) {
       .attr("transform", "rotate(-90)")
       .attr("y", 6)
       .attr("dy", ".71em")
-      .style("text-anchor", "end")
-      .text("sevendayYield");
+      .style("text-anchor", "end");
+//      .text("sevendayYield");
 
   svg.selectAll(".bar")
       .data(data)
