--- a/playground/baizhuan_7dayyield.html
+++ b/playground/baizhuan_7dayyield.html
@@ -119,7 +119,7 @@ d3.tsv("data/baizhuan.tsv", type, function(error, data) {
       .attr("y", 6)
       .attr("dy", ".71em")
       .style("text-anchor", "end");
-//      .text("sevendayYield");
+      .text("sevendayYield");
 
   svg.selectAll(".bar")
       .data(data)
