--- a/playground/baizhuan_7dayyield.html
+++ b/playground/baizhuan_7dayyield.html
@@ -67,8 +67,8 @@ body {
 <script>
 
 var margin = {top: 40, right: 20, bottom: 30, left: 40},
-    width = document.width - margin.left - margin.right,
-    height = document.height - margin.top - margin.bottom;
+    width = 800 - margin.left - margin.right,
+    height = 600 - margin.top - margin.bottom;
 
 var formatPercent = d3.format(".0%");
 
