--- a/playground/baizhuan_7dayyield.html
+++ b/playground/baizhuan_7dayyield.html
@@ -65,6 +65,8 @@ body {
 
 
 <script>
+alert(document.width);
+alert(document.height);
 
 var margin = {top: 40, right: 20, bottom: 30, left: 40},
     width = 800 - margin.left - margin.right,
