--- a/playground/baizhuan_milliongain.html
+++ b/playground/baizhuan_milliongain.html
@@ -59,8 +59,8 @@ body {
 }
 </style>
 <body>
-<script src="/script/d3.v3.min.js"></script>
-<script src="/script/d3.tip.v0.6.3.js"></script>
+<script src="/playground/script/d3.v3.min.js"></script>
+<script src="/playground/script/d3.tip.v0.6.3.js"></script>
 <script>
 
 var margin = {top: 40, right: 0, bottom: 10, left: 0},
