--- a/playground/baizhuan_7dayyield.html
+++ b/playground/baizhuan_7dayyield.html
@@ -64,8 +64,8 @@ body {
 <script>
 
 var margin = {top: 40, right: 0, bottom: 10, left: 0},
-    width = document.body.clientWidth - margin.left - margin.right,
-    height = document.bidy.clientHeight - margin.top - margin.bottom;
+    width = 800 - margin.left - margin.right,
+    height = 600 - margin.top - margin.bottom;
 
 var formatPercent = d3.format(".0%");
 
