--- a/playground/baizhuan_7dayyield.html
+++ b/playground/baizhuan_7dayyield.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
+<html>
+<head>
+  <meta charset="utf-8">
 <style>
 html {
   overflow-y:hidden;
@@ -58,6 +60,7 @@ body {
   left: 0;
 }
 </style>
+</head>
 <body>
 <script src="/playground/script/d3.v3.min.js"></script>
 <script src="/playground/script/d3.tip.v0.6.3.js"></script>
@@ -137,3 +140,4 @@ function type(d) {
 }
 
 </script>
+</html>
