--- a/playground/yuebao_milliongain.html
+++ b/playground/yuebao_milliongain.html
@@ -59,13 +59,13 @@ body {
 }
 </style>
 <body>
-<script src="http://d3js.org/d3.v3.min.js"></script>
-<script src="http://labratrevenge.com/d3-tip/javascripts/d3.tip.v0.6.3.js"></script>
+<script src="/playground/script/d3.v3.min.js"></script>
+<script src="/playground/script/d3.tip.v0.6.3.js"></script>
 <script>
 
 var margin = {top: 40, right: 0, bottom: 10, left: 0},
-    width = document.width - margin.left - margin.right,
-    height = document.height - margin.top - margin.bottom;
+    width = window.innerWidth - margin.left - margin.right,
+    height = window.innerHeight - margin.top - margin.bottom;
 
 var formatPercent = d3.format(".0%");
 
